--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,25 +1,1 @@
-.btn-info {
-  margin-bottom: 20px;
-}
-
-.option-content .form-options {
-  display: grid;
-  grid-template-columns: 1fr 1fr 200px;
-  grid-column-gap: 60px;
-  align-items: self-end;
-}
-
-.option-content .form-options .form-group {
-  display: flex;
-  flex-direction: column;
-}
-
-.option-content .option {
-  padding: 10px 20px;
-}
-
-.title-options {
-  font-weight: bold;
-  font-size: 15px;
-}
-
+.btn-info{margin-bottom:20px}.option-content .form-options{display:grid;grid-template-columns:1fr 1fr 200px;grid-column-gap:60px;align-items:self-end}.option-content .form-options .form-group{display:flex;flex-direction:column}.option-content .option{padding:10px 20px}.title-options{font-weight:700;font-size:15px}
