--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -4,8 +4,8 @@
 .option-content
     .form-options
         display: grid
-        grid-template-columns: 1fr 1fr 200px
-        grid-column-gap: 60px
+        grid-template-columns: 1fr 1fr 1fr 90px
+        grid-column-gap: 30px
         align-items: self-end
         .form-group
             display: flex
